[tool.poetry]
name = "storydownloader"
version = "0.1.0"
description = "Stories downloader"
authors = ["Dmitry Andriyankov <d.andriyankov@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
